Deletado Beans não utilizados e formatado o serviço de avaliação